--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="barra">
       <nav class="navbar navbar-expand-lg minav">
         <div class="container-fluid">
-           <a class="navbar-brand" href="../index.html"><b>BC Lorem</b></a>
+           <a class="navbar-brand" href="./index.html"><b>BC Lorem</b></a>
              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
              </button>
@@ -120,7 +120,7 @@
                </ul>
                <form class="d-flex" role="search">
                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                 <button class="custom-btn btn-3"><span>Búsqueda</span></button>                 
+                 <button class="custom-btn custom-btnn btn-11"><span>Búsqueda</span></button>                 
                </form>
              </div>
            </div>
@@ -228,7 +228,7 @@
             <div class="card-body">  -->
             <h5 class="card-title">Historia del Libro y las bibliotecas</h5>
             <p class="card-text">Entrevista a Alejandro E. Parada</p>
-            <button class="custom-btn btn-5"><span>Leer</span></button>
+            <button class="custom-btn custom-btnn btn-5"><span>Leer</span></button>
          </div>
         </div>
       </div>  
@@ -240,7 +240,7 @@
           <div class="card-body">
           <h5 class="card-title">Novedades en la sección Infantil</h5>
           <p class="card-text">Conoce los nuevos libros.</p>
-          <button class="btn-5"><span>Conocer</span></button>
+          <button class="custom-btn custom-btnn btn-5"><span>Conocer</span></button>
           
         </div>
       </div>
@@ -253,7 +253,7 @@
         <div class="card-body">
         <h5 class="card-title">¿Es verdad que un robot que puede leer?</h5>
         <p class="card-text" >Foro debate sobre el futuro de la IA</p>
-        <button class="btn-5"><span>Investigar</span></button>
+        <button class="custom-btn custom-btnn btn-5"><span>Investigar</span></button>
 
       </div>
     </div>
@@ -266,7 +266,7 @@
       <div class="card-body" style="height: 25%";>
       <h5 class="card-title">Conoce la colección de nuestros autores locales</h5>
       <p class="card-text">Disponible para toda la comunidad.</p>
-      <button class="btn-5"><span>Visitar</span></button>
+      <button class="custom-btn custom-btnn btn-5"><span>Visitar</span></button>
      </div>
   </div>
 </div>  
@@ -303,7 +303,7 @@ de contenidos.  <br>
 <p>
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ipsum iusto dolor natus optio. Eos dolor quam voluptate molestiae delectus!
 </p>
-<button class="btn btn-helloworld">Hello World</button>
+<button class= "custom-btn custom-btnn btn-5">Inscripción</button>
 
 </div>
 </aside>
@@ -324,11 +324,12 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ipsum iust
               <label for="exampleInputEmail1" class="form-label">Suscribete a nuestro newsletter!</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
               <div id="emailHelp" class="form-text">Nunca compartiremos tu email.</div>
-              <button class="custom-btn btn-9"><span>Enviar</span></button>
+              <button class="custom-btn custom-btnn btn-8"><span>Enviar</span></button>
           </div>
         </form>
     </div>
-      <div class="col-sm-3 libri">     
+      <div class="col-sm-3 libri">
+        <img alt="" class="libri" style="display: block; height: auto !important; border="0" hspace="0" vspace="0" src="https://media.giphy.com/media/QWRbnbKwghRE0GbAQx/giphy.gif">     
         <p>BC Lorem - Todos los derechos reservados ©</p>
       </div>        
     </div>
