--- a/pages/guias.html
+++ b/pages/guias.html
@@ -107,7 +107,7 @@
          </ul>
          <form class="d-flex" role="search">
            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-           <button class="custom-btn btn-3"><span>Búsqueda</span></button>
+           <button class="custom-btn custom-btnn btn-11"><span>Búsqueda</span></button>
          </form>
        </div>
      </div>
@@ -315,7 +315,7 @@
             <label for="exampleInputEmail1" class="form-label">Suscribete a nuestro newsletter!</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             <div id="emailHelp" class="form-text">Nunca compartiremos tu email.</div>
-            <button class="custom-btn btn-9"><span>Enviar</span></button>
+            <button class="custom-btn custom-btnn btn-8"><span>Enviar</span></button>
         </div>
       </form>
   </div>
