--- a/index.html
+++ b/index.html
@@ -278,31 +278,30 @@
 
 <!-- articulo con foto -->
 <aside>
-<div class="clearfix asides txt-main" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+<div class="clearfix asides curso efecti" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
 
 <img src="images/andrea.jpg" class="img-fluid col-md-6 float-md-end mb-3 ms-md-3" alt="Responsive image woman">
 
 <h4>Curso Derechos de Autor en las Bibliotecas universitarias</h4>
 
 <p>
-Se espera que, al finalizar el recorrido del curso, los participantes logren:</p>  <p>
-● Distinguir las características y funciones de una biblioteca digital y de un
-repositorio institucional; 
-● Identificar fuentes de información relevantes y de calidad disponibles en soporte
-digital; 
-● Recuperar y usar efectivamente información necesaria a través de bibliotecas
-digitales; <br>
-● Colaborar en la conformación de repositorios institucionales de acceso abierto
+Se espera que, al finalizar el recorrido del curso, los participantes logren:</p> 
+ <ul>
+<li>Distinguir las características y funciones de una biblioteca digital y de un
+repositorio institucional; </li>
+<li>Identificar fuentes de información relevantes y de calidad disponibles en soporte
+digital; </li>
+<li>Recuperar y usar efectivamente información necesaria a través de bibliotecas
+digitales; </li>
+<li>Colaborar en la conformación de repositorios institucionales de acceso abierto
 para el archivo, preservación, distribución y acceso de la producción académica
-y científica y en particular de objetos de aprendizaje; <br>
-● Comprender los aspectos legales relacionados con la creación y uso de
+y científica y en particular de objetos de aprendizaje; <br></li>
+<li>Comprender los aspectos legales relacionados con la creación y uso de
 contenidos digitales, incluyendo políticas institucionales en cuanto a producción
 intelectual, depósito y cesión de derechos de autor y su impacto en la producción
-de contenidos.  <br>
+de contenidos.</li>  <br>
 
-<p>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ipsum iusto dolor natus optio. Eos dolor quam voluptate molestiae delectus!
-</p>
+</ul>
 <button class= "custom-btn custom-btnn btn-5">Inscripción</button>
 
 </div>
