--- a/pages/historia.html
+++ b/pages/historia.html
@@ -158,27 +158,27 @@
   <ol class="timeline row">
     <li>2000
       <span>
-        Lorem ipsum dolor sit amet.
+        Se completó la colección Juvenil.
       </span>
     </li>
     <li>2001 
       <span>
-        Lorem, ipsum dolor.
+        Puesta en marcha del Sistema Integrado de Bibliotecas
       </span>
     </li>
     <li>2002
       <span>
-        Lorem ipsum dolor sit amet consectetur.
+        Asume la Dirección Gloria Manriquez.
       </span>  
     </li>
     <li>2003
         <span>
-        Lorem ipsum dolor, sit amet consectetur adipisicing.
+        Acuerdo de cooperación con las Naciones Unidas.
       </span>
     </li>
     <li>2004
         <span>
-        Lorem, ipsum.
+        Desarrollo de servicios virtuales.
       </span>
     </li>
   </ol>
@@ -190,19 +190,20 @@
     <div id="section1" class="section">
         <div class="sectionInner">
           <h2>Comienzos</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid at ullam delectus reprehenderit, qui ea non impedit cum labore unde.</p>
+          <p>La Universidad Nacional de Lorem fue creada sobre la base del Instituto Tecnológico Ipsum en el año 1956 con las carreras de Ingeniería Civil, Ingeniería Industrial e Ingeniería Química y Bioquímica con la idea de ser una Universidad eminentemente orientada a disciplinas tecnológicas. Años después se sumaron las carreras de las Humanidades y Ciencias Sociales, además de Geología, Física, Matemática, Agronomía, Economía, Ciencias de la administración y Derecho. En la actualidad cuenta con treinta y nueve carreras, más los ciclos de especialización docente.</p>
         </div>
     </div>
     <div id="section2" class="section">
         <div class="sectionInner">
-          <h3>Personajes importantes</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem, ab.</p>
+          <h3>Colección de la primera etapa</h3>
+          <p>LA Biblioteca Central Lorem comienza sus actividades en el año 1956, con un acervo básico consistente en 7.774 piezas bibliográficas, originado en la Biblioteca del Instituto Instituto Tecnológico Ipsum.</p>
         </div>
     </div>
     <div id="section3" class="section">
         <div class="sectionInner">
-          <h3>Hechos significativos</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum aperiam excepturi eligendi reiciendis iusto deserunt sapiente corrupti! Reprehenderit quibusdam neque, labore enim iste ut provident perferendis beatae ad qui corrupti.</p>
+          <h3>Su primer Director</h3>
+          <p>fue el Prof. Pepito Perez. Su gestión se caracterizó por la realización de excelentes trabajos de recopilación bibliográfica, entre ellos la Biblioteca Patagónica -obras de autores patagónicos y/o sobre la Patagonia.</p>
+          <p>En los primeros diez años de existencia forma una colección de alta calidad científica, reuniendo 40.160 piezas bibliográficas, sin contar los volúmenes de revistas.</p>
         </div>
     </div>
     <div id="section4" class="section">
@@ -213,16 +214,19 @@
     </div>
     <div id="section5" class="section">
         <div class="sectionInner">
-          <h3>Colección historica</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus neque deserunt doloremque, excepturi libero velit!</p>
+          <h3>Objetivo</h3>
+          <p>Es considerada una unidad de información y documentación, orientada a la prestación de servicios específicamente dirigidos a los alumnos de los primeros años de todas las carreras y hasta los estudios avanzados (docencia, posgrado e investigación) de aquellas disciplinas que no dispongan de una unidad de información especializada.
+          </p>
         </div>
     </div>
     <div id="section6" class="section">
         <div class="sectionInner">
-          <h3>Actualidad</h3>
-          <p>Lorem, ipsum dolor.</p>
+          <h3>Compromiso púbico y actualidad</h3>
+          <p>En su condición de biblioteca pública (creada y mantenida con fondos públicos) la BC presta un servicio abierto a la comunidad. Contra presentación de un documento, todo material puede consultarse en la Sala de Lectura y/o retirarse a domicilio (según corresponda), en el horario en que la BC permanece abierta.</p>
+          <p>En años recientes la BC se ha concentrado en la accesibilidad a los recursos de información, comenzando a funcionar como biblioteca de acceso directo a la estantería, desde 1999. También ha comenzado el camino de volcar todos los recursos de información para ofrecerlos mediante un Portal, utilizando tecnología web.</p>
         </div>
     </div>
+
 </div>
 </aside>
 
